增加陀螺仪控制云台yaw轴转动

--- a/MDK-ARM/os_2006.uvprojx
+++ b/MDK-ARM/os_2006.uvprojx
@@ -339,7 +339,7 @@
               <MiscControls></MiscControls>
               <Define>USE_HAL_DRIVER,STM32F427xx</Define>
               <Undefine></Undefine>
-              <IncludePath>../Core/Inc;                  ../Drivers/STM32F4xx_HAL_Driver/Inc;                  ../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy;                  ../Middlewares/Third_Party/FreeRTOS/Source/include;                  ../Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS;                  ../Middlewares/Third_Party/FreeRTOS/Source/portable/RVDS/ARM_CM4F;                  ../Drivers/CMSIS/Device/ST/STM32F4xx/Include;                  ../Drivers/CMSIS/Include;                  ..\Bsp</IncludePath>
+              <IncludePath>../Core/Inc;                   ../Drivers/STM32F4xx_HAL_Driver/Inc;                   ../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy;                   ../Middlewares/Third_Party/FreeRTOS/Source/include;                   ../Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS;                   ../Middlewares/Third_Party/FreeRTOS/Source/portable/RVDS/ARM_CM4F;                   ../Drivers/CMSIS/Device/ST/STM32F4xx/Include;                   ../Drivers/CMSIS/Include;                   ..\Bsp</IncludePath>
             </VariousControls>
           </Cads>
           <Aads>
@@ -407,6 +407,16 @@
               <FileName>bsp_rc.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\Bsp\bsp_rc.c</FilePath>
+            </File>
+            <File>
+              <FileName>bsp_imu_data_decode.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Bsp\bsp_imu_data_decode.c</FilePath>
+            </File>
+            <File>
+              <FileName>bsp_packet.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Bsp\bsp_packet.c</FilePath>
             </File>
           </Files>
         </Group>
